{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 71,
  "lineage": "114337f4-28a6-4bae-7582-9e1cb903c560",
  "resources": [
    {
      "mode": "data",
      "type": "google_compute_address",
      "name": "ip_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-03-30T08:20:14.964-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-379914/global/firewalls/ssh-firewall-lewis",
            "log_config": [],
            "name": "ssh-firewall-lewis",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-379914/global/networks/vpc-network-lewis",
            "priority": 1000,
            "project": "terraform-379914",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-379914/global/firewalls/ssh-firewall-lewis",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-03-30T08:20:14.849-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-379914/global/firewalls/web-firewall-lewis",
            "log_config": [],
            "name": "web-firewall-lewis",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-379914/global/networks/vpc-network-lewis",
            "priority": 1000,
            "project": "terraform-379914",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-379914/global/firewalls/web-firewall-lewis",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230306",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-379914/zones/us-central1-c/disks/terraform-fall-lewis"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-379914/zones/us-central1-c/instances/terraform-fall-lewis",
            "instance_id": "2821366747176113746",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "AX2mS4hEJ3o=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install nginx -y; sudo systemctl enable --now nginx",
            "name": "terraform-fall-lewis",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.173.51.240",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-379914/global/networks/vpc-network-lewis",
                "network_ip": "10.1.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-379914/regions/us-central1/subnetworks/lewis-subnet",
                "subnetwork_project": "terraform-379914"
              }
            ],
            "project": "terraform-379914",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-379914/zones/us-central1-c/instances/terraform-fall-lewis",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "data.google_compute_address.ip_address",
            "data.google_compute_image.my_image",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.lewis-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-379914/global/networks/vpc-network-lewis",
            "mtu": 0,
            "name": "vpc-network-lewis",
            "project": "terraform-379914",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-379914/global/networks/vpc-network-lewis"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "lewis-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-03-30T08:20:15.625-07:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/terraform-379914/regions/us-central1/subnetworks/lewis-subnet",
            "ip_cidr_range": "10.1.0.0/24",
            "name": "lewis-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-379914/global/networks/vpc-network-lewis",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraform-379914",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-379914/regions/us-central1/subnetworks/lewis-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}